Blurred Lightbox BGs, removed overlay img, TODO:fix winning anim colors.

--- a/css/dev.css
+++ b/css/dev.css
@@ -11,20 +11,16 @@ and (min-device-width: 801px) {
 		position: fixed;
 		padding: 10px;
 		border-radius: 10px;
-		background-color: rgba(51, 51, 51, 0.85);
+		background: rgba(255, 255, 255, 0.6);
 		z-index: 3900;
 		bottom: 10px;
 		right: 10px;
-		color: #ccc;
+		color: #333;
 	}
 	
 	.to-top {
 		display: none;
 	}
-	
-		.scroll-down-instruction p, .to-top p {
-			color: #ccc;
-		}
 	
 	.play {
 		font-size: 24px;
@@ -69,7 +65,7 @@ and (min-device-width: 801px) {
         height: 160px;
         padding: 20px;
         border-radius: 10px;
-        background: url("../images/overlay-white.png") repeat;
+        background: rgba(255, 255, 255, 0.9);
         color: #333;
         overflow: hidden;
         text-align: left;
