--- a/css/game.css
+++ b/css/game.css
@@ -31,7 +31,7 @@ and (min-device-width: 801px) {
 		width: 100%;
 		height: 100%;
 		z-index: 5000;
-		background: url("../images/overlay-white.png") repeat;
+		background: rgba(255, 255, 255, 0.6);
 		text-align: center;
 		display: none;
 	}
@@ -62,7 +62,7 @@ and (min-device-width: 801px) {
 		width: 100%;
 		height: 100%;
 		z-index: 6000;
-		background: url("../images/overlay-white.png") repeat;
+		background: rgba(255, 255, 255, 0.6);
 		text-align: center;
 		display: none;
 	}
