--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,14 @@ i {
 	cursor: pointer;
 }
 
+.blur-back {
+	-webkit-filter: blur(20px);
+	-moz-filter: blur(20px);
+	-ms-filter: blur(20px);
+	filter: blur(20px);
+}
+
+/*
 @media only screen 
 and (min-device-width: 320px) 
 and (max-device-width: 800px) {
@@ -246,12 +254,16 @@ and (max-device-width: 800px) {
 		z-index: 1150;
 	}
 }
+*/
 
 @media only screen 
 and (min-device-width: 801px) {
 	html {
-		background: url("../images/back.png") repeat fixed;
 		min-width: 900px;
+	}
+	
+	#wrapper {
+		background: url("../images/back.png") repeat fixed;
 	}
 
 	.header {
@@ -259,7 +271,7 @@ and (min-device-width: 801px) {
 		width: 100%;
 		height: 62px;
 		border-bottom: 1px solid #ddd;
-		background: url("../images/overlay-white.png") repeat;
+		background: rgba(255, 255, 255, 0.9);
 	}
 	
 	.head-element {
